--- a/articles.html
+++ b/articles.html
@@ -8,15 +8,15 @@
 </head>
 <body>
 
-	<div class="header">
-		<a href="milk.html"><img src="photos/tw.png" style="width:82px; height:82px;" class="logo">
+<div class="header">
+	<a href="milk.html"><img class="home__button" src="photos/tw.png"></a>
 		<div class= navigation>
-			<a STYLE="text-decoration:none" a href="articles.html" class="button"><font color="#3a3a3a">ARTICELS</font></a>
-			<a STYLE="text-decoration:none" a href="notes.html" class="button"><font color="#3a3a3a">NOTES</font></a>
-			<a STYLE="text-decoration:none" a href="http://trentwalton.com/info" class="button"><font color="#3a3a3a">INFO</font></a>
-			<a STYLE="text-decoration:none" a href="http://trentwalton.com/search" class="button"><font color="#3a3a3a">SEARCH</font></a>
+			<a class="navigation__button" href="articles.html">ARTICELS</a>
+			<a class="navigation__button" href="notes.html">NOTES</a>
+			<a class="navigation__button" href="http://trentwalton.com/info">INFO</a>
+			<a class="navigation__button" href="http://trentwalton.com/search">SEARCH</a>
 		</div>
-	</div>
+</div>
 
 
 	<!--<div class="article">
