adding any new updates to files

--- a/milk.html
+++ b/milk.html
@@ -93,11 +93,9 @@
 	</div>
 </div>
 
-<a href="milk.html"><img class="home__button" src="photos/tw.png"></a>
-
 <div class="footer">
 	<div class="footer__item">
-			<a class="footer__itemImage" href="https://twitter.com/TrentWalton"><img src="photos/twitter.png"><font color="EE4938">FOLLOW ME ON TWIITER</font></a>
+			<a href="https://twitter.com/TrentWalton"><img class="footer__itemImage" src="photos/twitter.png">FOLLOW ME ON TWIITER</a>
 
 			<img src="photos/rss.png" style="width:12px; height:12px;"><a href="???"><font color="EE4938">RSS FEED</font></a>
 
